# advent-of-code

./: .gitignore  README.md  pyproject.toml  solveaoc.py  solveaoc2.py  template.py
aoc/utils/: errors.py  readers.py
aoc/year_2023/day_01/: day_01_solvers.py  test_day_01_solvers.py
aoc/year_2024/day_01/: input_reader.py  part1.py  part1_solver.py  part2.py  part2_solver.py  test_day_01.py
aoc/year_2024/day_02/: __main__.py
aoc/year_2024/day_03/: day03.py
aoc/year_2024/day_04/: day04.py
aoc/year_2024/day_05/: day05.py
aoc/year_2024/day_06/: day06.py
aoc/year_2024/day_07/: day07.py  day07p2.py
aoc/year_2024/day_08/: day08.py  day08p2.py
aoc/year_2024/day_09/: __trash__.py  checksum.py  current_sorted_block_p2.txt  day09.py  day09p2.py
aoc/year_2024/day_10/: day10.py  map2.txt
aoc/year_2024/day_11/: day11.py  day11p2.py  day11p2v2.py  day11p2v3.py
aoc/year_2024/day_12/: input_reader.py  part1.py  part2.py  part2old.py  test_day_12.py
aoc/year_2024/day_13/: part1_solver.py  part2_solver.py  test_day_13.py
aoc/year_2024/day_14/: 7412.txt  day_14_solvers.py  maps_7412.txt  test_day_14_solvers.py
aoc/year_2024/day_15/: day_15_solvers.py  test_day_15_solvers.py
aoc/year_2024/day_16/: day_16_solvers copy.py  day_16_solvers.py  test_day_16_solvers.py
aoc/year_2024/day_17/: README.txt  day_17_solvers.py  test_day_17_solvers.py
aoc/year_2024/day_18/: day_18_solvers.py  test_day_18_solvers.py
aoc/year_2024/day_19/: day_19_solvers.py  test_day_19_solvers.py
tests/utils/io/: test_parse_char_matrix_by_columns.py
(+11 files in other folders)
